restmini 1.x, 2017-07-12
------------------------
- Attempt to get PSR-logger from dependency injection container.
  Use error_log() as fallback if no logger and severity error or worse.
- Release 0.9.

restmini 1.x, 2017-06-16
------------------------
- Removed configurability; because no real need.
  And not possible to inject config object without breaking constructor's
  focus on essentials (except by as option; would be real clumsy).
  Instead users should configure (permanently, that is) by class extension.

restmini 1.x, 2017-06-15
------------------------
- New option correlation_id_header.

restmini 1.x, 2017-04-22
------------------------
- New option record_args: record path/query/body arguments; for logs and the
  info() method.
- Renamed path/query/body arguments; from 'parameters'.
- New optional info() parameter 'only'; values request|response.
- Use the info() method when logging errors.
- Release 0.9.
- Fix that info() no longer contained method and url, and that parser should be
  a response property (not request).
- info() error must always be first property. And fix info array concatenation.

restmini 1.x, 2017-03-09
------------------------
- Renamed 'log_severity' option (from 'log_severity_error'). And it's default
  is now a class constant.
- Default log severity is now warning (not error), because the user of this
  HTTP client (not the client self) should interprete and decide whether
  a request/response error is an actual error.

restmini 1.x, 2016-11-26
------------------------
- Error logs must include request duration.
- Client class renamed to Client; from RestMini. Conf var domain renamed to
  lib_simplecomplex_restmini_client; from lib_simplecomplex_restmini.
- Fixed ternary concatenation error/risk in configGet().

restmini 1.x, 2016-11-12
------------------------
- Request timeout/execution timeout algo should take elapsed execution time into
  consideration.

restmini 1.x, 2016-10-23
------------------------